--- a/app/src/main/res/layout/activity_detail_menu.xml
+++ b/app/src/main/res/layout/activity_detail_menu.xml
@@ -51,15 +51,15 @@
     <LinearLayout
         android:id="@+id/ViewDate"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintTop_toBottomOf="@+id/view1"
         tools:layout_editor_absoluteX="0dp">
 
         <androidx.cardview.widget.CardView
             android:id="@+id/card_tanggal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="400dp"
+            android:layout_height="match_parent"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
             android:layout_marginRight="10dp"
@@ -71,13 +71,13 @@
             tools:ignore="MissingConstraints">
 
             <RelativeLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
                 <ImageView
                     android:id="@+id/img_date"
                     android:layout_width="30dp"
-                    android:layout_height="30dp"
+                    android:layout_height="20dp"
                     android:layout_marginStart="3dp"
                     android:layout_marginTop="2dp"
                     android:src="@drawable/calendar"
@@ -93,21 +93,67 @@
                     android:textColor="@android:color/black"
                     tools:ignore="HardcodedText" />
 
-                <EditText
-                    android:id="@+id/tv_tanggal"
-                    android:layout_width="100dp"
+                <View
+                    android:id="@+id/view_batas"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_below="@id/img_date"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginTop="2dp"
+                    android:layout_marginRight="5dp"
+                    android:background="#D6D6D6" />
+
+                <ImageView
+                    android:id="@+id/img_time"
+                    android:layout_width="30dp"
+                    android:layout_height="20dp"
+                    android:layout_below="@id/view_batas"
+                    android:layout_marginStart="3dp"
+                    android:layout_marginTop="2dp"
+                    android:src="@drawable/clock"
+                    tools:ignore="ContentDescription" />
+
+                <RadioGroup
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/tv_date_choose"
-                    android:layout_marginStart="7dp"
-                    android:layout_toEndOf="@id/img_date"
-                    android:background="@color/White"
-                    android:fontFamily="@font/reg"
-                    android:inputType="date"
-                    android:textColor="@android:color/black"
-                    android:textSize="14sp"
-                    android:textStyle="bold"
-                    android:importantForAutofill="no"
-                    tools:ignore="LabelFor" />
+                    android:layout_centerInParent="true"
+                    android:layout_below="@id/view_batas"
+                    android:layout_toEndOf="@id/img_time"
+                    android:layout_marginTop="2dp"
+                    android:orientation="horizontal"
+                    android:id="@+id/radioGroup">
+
+                    <RadioButton
+                        android:id="@+id/radio_siang"
+                        android:layout_width="75dp"
+                        android:layout_height="wrap_content"
+                        android:text="Siang"
+                        android:onClick="checkButton"
+                        android:background="@drawable/bg_btn_waktu"
+                        android:button="@android:color/transparent"
+                        android:paddingBottom="2dp"
+                        android:textSize="14sp"
+                        android:gravity="center"
+                        android:checked="true"
+                        android:layout_marginEnd="5dp"
+                        tools:ignore="HardcodedText" />
+
+                    <RadioButton
+                        android:id="@+id/radio_sore"
+                        android:layout_width="75dp"
+                        android:layout_height="wrap_content"
+                        android:paddingBottom="2dp"
+                        android:text="Sore"
+                        android:onClick="checkButton"
+                        android:background="@drawable/bg_btn_waktu"
+                        android:button="@android:color/transparent"
+                        android:textSize="14sp"
+                        android:gravity="center"
+                        android:checked="true"
+                        tools:ignore="HardcodedText" />
+
+                </RadioGroup>
+
 
             </RelativeLayout>
 
@@ -116,51 +162,45 @@
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardView4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_marginTop="10dp"
-            android:layout_marginRight="10dp"
+            android:layout_marginEnd="10dp"
             android:layout_weight="1"
             app:layout_constraintTop_toBottomOf="@+id/view1"
             tools:ignore="MissingConstraints">
 
             <RelativeLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-                <ImageView
-                    android:id="@+id/img_time"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_marginStart="3dp"
-                    android:layout_marginTop="2dp"
-                    android:src="@drawable/clock"
-                    tools:ignore="ContentDescription" />
-
-                <TextView
-                    android:id="@+id/tv_time_chose"
-                    android:layout_width="wrap_content"
+                <EditText
+                    android:id="@+id/tv_tanggal"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="7dp"
-                    android:layout_toEndOf="@id/img_time"
-                    android:text="Pilih Jam"
+                    android:background="@color/White"
+                    android:fontFamily="@font/reg"
+                    android:inputType="none"
                     android:textColor="@android:color/black"
-                    tools:ignore="HardcodedText" />
+                    android:textSize="13sp"
+                    android:textStyle="bold"
+                    android:importantForAutofill="no"
+                    tools:ignore="LabelFor" />
 
                 <EditText
                     android:id="@+id/tv_time"
-                    android:layout_width="100dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/tv_time_chose"
+                    android:layout_below="@id/tv_tanggal"
                     android:layout_marginStart="7dp"
-                    android:layout_toEndOf="@id/img_time"
                     android:background="@color/White"
                     android:fontFamily="@font/reg"
                     android:textColor="@android:color/black"
+                    android:layout_marginTop="4dp"
                     android:textSize="14sp"
                     android:textStyle="bold"
-                    android:inputType="time"
+                    android:inputType="none"
                     tools:ignore="Autofill,LabelFor" />
 
             </RelativeLayout>
@@ -172,7 +212,7 @@
         android:id="@+id/image_detail_menu"
         android:layout_width="match_parent"
         android:layout_height="180dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="7dp"
         android:src="@drawable/loading"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -381,7 +421,8 @@
                 android:text="@string/price_item"
                 android:textColor="@android:color/black"
                 android:textSize="20sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                tools:ignore="ObsoleteLayoutParam" />
 
             </LinearLayout>
 
@@ -389,7 +430,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="right"
-                android:layout_marginEnd="19dp">
+                android:layout_marginEnd="19dp"
+                tools:ignore="RtlHardcoded">
 
             <Button
                 android:id="@+id/btn_chart"
