--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    tools:context=".fragments.FragmentHome">
+    tools:context=".Fragment.FragmentHome">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -47,7 +47,7 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
                             android:fontFamily="@font/medium"
-                            android:text="@string/developer"
+                            android:text=""
                             android:textColor="@android:color/white"
                             android:textSize="14sp" />
 
@@ -103,9 +103,10 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="top"
                             android:fontFamily="@font/medium"
-                            android:text="@string/money"
+                            android:text="loading.."
                             android:textColor="@android:color/white"
-                            android:textSize="14sp" />
+                            android:textSize="14sp"
+                            tools:ignore="HardcodedText" />
 
 
                     </LinearLayout>
