--- a/app/src/main/res/layout/item_row_chart.xml
+++ b/app/src/main/res/layout/item_row_chart.xml
@@ -16,16 +16,20 @@
         android:layout_width="match_parent"
         android:layout_height="75dp">
 
-        <ImageView
-            android:id="@+id/image_menu"
-            android:layout_width="70dp"
-            android:layout_height="75dp"
+        <TextView
+            android:id="@+id/quantity_chart"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
-            android:layout_marginStart="0dp"
-            android:contentDescription="@string/todo"/>
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="7dp"
+            android:text="@string/quantity"
+            android:textSize="14sp"
+            android:textColor="#000"
+            />
 
         <TextView
-            android:id="@+id/title"
+            android:id="@+id/title_chart"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/Title"
@@ -35,54 +39,58 @@
             android:layout_marginTop="5dp"/>
 
 
-        <TextView
-            android:id="@+id/tv_quantity"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/title"
-            android:layout_marginStart="100sp"
-            android:layout_marginTop="7dp"
-            android:text="@string/quantity"
-            android:textSize="14sp"
-            android:textColor="#000"
-            />
+
 
         <TextView
-            android:id="@+id/price"
+            android:id="@+id/price_chart"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
+            android:layout_below="@id/title_chart"
+            android:layout_toEndOf="@id/quantity_chart"
             android:layout_marginTop="7dp"
-            android:layout_marginEnd="22dp"
+            android:layout_marginStart="65dp"
             android:text="@string/price_item"
             android:textColor="#000"
             android:textSize="14sp"
             tools:ignore="RelativeOverlap" />
 
         <TextView
-            android:id="@+id/tv_date"
+            android:id="@+id/date_chart"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="22dp"
             android:layout_marginTop="7dp"
             android:layout_marginStart="100sp"
             android:layout_alignParentEnd="true"
-            android:layout_below="@id/price"
             android:text="25/08/2020"
             android:textColor="#000"
             android:textSize="14sp"
             tools:ignore="HardcodedText" />
 
         <TextView
-            android:id="@+id/tv_time"
+            android:id="@+id/time_chart"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="22dp"
-            android:layout_marginTop="7dp"
+            android:layout_marginTop="4dp"
             android:layout_marginStart="100sp"
             android:layout_alignParentEnd="true"
-            android:layout_below="@id/tv_date"
+            android:layout_below="@id/date_chart"
             android:text="Waktu: 10.30"
+            android:textColor="#000"
+            android:textSize="14sp"
+            tools:ignore="HardcodedText" />
+
+        <TextView
+            android:id="@+id/katering_chart"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="22dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginStart="100sp"
+            android:layout_alignParentEnd="true"
+            android:layout_below="@id/time_chart"
+            android:text="Dpawon"
             android:textColor="#000"
             android:textSize="14sp"
             tools:ignore="HardcodedText" />
