--- a/adminpanels/src/main/res/layout/cardmenu_item.xml
+++ b/adminpanels/src/main/res/layout/cardmenu_item.xml
@@ -9,9 +9,9 @@
         android:layout_height="wrap_content"
         android:padding="10dp">
         <ImageView
-            android:id="@+id/imgMenuItem"
+            android:id="@+id/imgMenuItem2"
             android:layout_width="75dp"
-            android:layout_height="75dp"
+            android:layout_height="100dp"
             android:src="@drawable/ic_launcher_background"
             android:layout_marginLeft="15dp"/>
         <Button
@@ -33,20 +33,13 @@
             android:layout_marginTop="0dp"
             android:layout_marginEnd="0dp"
             android:background="@drawable/ic_baseline_delete_24" />
-    </RelativeLayout>
-    <LinearLayout
-        android:layout_marginLeft="100dp"
-        android:layout_marginTop="10dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
         <TextView
             android:id="@+id/textNamaMenu"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="5dp"
-            android:layout_toEndOf="@+id/imgMenuItem"
+            android:layout_toEndOf="@+id/imgMenuItem2"
             android:text="Nama" />
 
         <TextView
@@ -56,7 +49,7 @@
             android:layout_below="@+id/textNamaMenu"
             android:layout_marginTop="5dp"
             android:layout_marginLeft="16dp"
-            android:layout_toEndOf="@id/imgMenuItem"
+            android:layout_toEndOf="@id/imgMenuItem2"
             android:text="Descripsi" />
         <TextView
             android:id="@+id/textHargaMenu"
@@ -65,7 +58,7 @@
             android:layout_below="@id/textDescMenu"
             android:layout_marginTop="5dp"
             android:layout_marginLeft="16dp"
-            android:layout_toEndOf="@id/imgMenuItem"
+            android:layout_toEndOf="@id/imgMenuItem2"
             android:text="Harga"/>
         <TextView
             android:id="@+id/textCat"
@@ -75,8 +68,7 @@
             android:layout_marginTop="5dp"
             android:layout_marginLeft="16dp"
             android:layout_marginBottom="20dp"
-            android:layout_toEndOf="@id/imgMenuItem"
+            android:layout_toEndOf="@id/imgMenuItem2"
             android:text="Kategori" />
-    </LinearLayout>
-
+    </RelativeLayout>
 </androidx.cardview.widget.CardView>
