Delete img click + tampil gambar

--- a/adminpanels/src/main/res/layout/activity_data_menu.xml
+++ b/adminpanels/src/main/res/layout/activity_data_menu.xml
@@ -13,6 +13,7 @@
         android:layout_height="?attr/actionBarSize"
         android:background="@color/colorAccent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -26,19 +27,22 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/dToolbarMenu" />
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/searchMenu">
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvd_Menu"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:listitem="@layout/cardmenu_item"/>
-    </ScrollView>
+            tools:listitem="@layout/cardmenu_item"
+            app:layout_constraintTop_toBottomOf="@id/searchMenu"/>
+
+    <ProgressBar
+        android:id="@+id/pb_menu"
+        android:layout_width="wrap_content"
+        android:layout_height="48dp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab_addMenu"
