--- a/adminpanels/src/main/res/layout/activity_main.xml
+++ b/adminpanels/src/main/res/layout/activity_main.xml
@@ -11,34 +11,57 @@
         android:id="@+id/mToolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="@color/colorAccent">
-
+        android:background="@color/colorTop">
     </androidx.appcompat.widget.Toolbar>
+    <LinearLayout
+        android:id="@+id/linearGradient"
+        android:layout_below="@+id/mToolbar"
+        android:layout_width="match_parent"
+        android:layout_height="130dp"
+        android:orientation="vertical"
+        android:background="@drawable/gradient_dashboard">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <TextView
+                android:id="@+id/textHello"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Halo,"
+                android:textSize="20dp"
+                android:textColor="@android:color/white"
+                android:layout_marginTop="25dp"
+                android:layout_marginLeft="24dp"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignTop="@+id/textHello"
+                android:layout_alignBottom="@+id/textHello"
+                android:layout_marginTop="0dp"
+                android:layout_marginBottom="0dp"
+                android:layout_marginLeft="5dp"
+                android:layout_toEndOf="@+id/textHello"
+                android:text="Admin"
+                android:textColor="@android:color/white"
+                android:textSize="20dp" />
+
+        </RelativeLayout>
+    </LinearLayout>
 
     <FrameLayout
         android:id="@+id/textCont"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/mToolbar"
+        android:layout_below="@+id/linearGradient"
         android:layout_marginTop="0dp">
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-
-            <TextView
-                android:id="@+id/textPanel"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="50dp"
-                android:text="PANEL ADMIN"
-                android:textAlignment="center"
-                android:textColor="@android:color/holo_green_dark"
-                android:textSize="24dp" />
             <GridLayout
                 android:id="@+id/gridL"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_below="@id/textPanel"
                 android:rowCount="2"
                 android:columnCount="2"
                 android:padding="10dp">
