--- a/adminpanels/src/main/res/layout/cardmenu_item.xml
+++ b/adminpanels/src/main/res/layout/cardmenu_item.xml
@@ -14,14 +14,15 @@
             android:layout_height="100dp"
             android:src="@drawable/ic_launcher_background"
             android:layout_marginLeft="15dp"/>
+
         <Button
             android:id="@+id/btn_edit"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:layout_alignParentTop="true"
-            android:layout_marginTop="0dp"
-            android:layout_marginEnd="10dp"
-            android:layout_toStartOf="@+id/btn_delete"
+            android:layout_below="@+id/btn_delete"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="0dp"
             android:background="@drawable/ic_baseline_edit_24" />
 
         <Button
@@ -60,15 +61,29 @@
             android:layout_marginLeft="16dp"
             android:layout_toEndOf="@id/imgMenuItem2"
             android:text="Harga"/>
+
         <TextView
             android:id="@+id/textCat"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/textHargaMenu"
-            android:layout_marginTop="5dp"
+            android:layout_marginStart="60dp"
             android:layout_marginLeft="16dp"
-            android:layout_marginBottom="20dp"
-            android:layout_toEndOf="@id/imgMenuItem2"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="50dp"
+            android:layout_toEndOf="@+id/textNamaMenu"
             android:text="Kategori" />
+
+        <TextView
+            android:id="@+id/textCatering"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/textCat"
+            android:layout_alignStart="@+id/textCat"
+            android:layout_alignEnd="@+id/textCat"
+            android:layout_marginStart="0dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="0dp"
+            android:text="Katering" />
     </RelativeLayout>
 </androidx.cardview.widget.CardView>
