--- a/adminpanels/src/main/res/values/colors.xml
+++ b/adminpanels/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+
+    <!--Color Gradient-->
+    <color name="colorTop">#2193b0</color>
+    <color name="colorBot">#6dd5ed</color>
 </resources>
