--- a/adminpanels/src/main/res/drawable/shape_rectangle.xml
+++ b/adminpanels/src/main/res/drawable/shape_rectangle.xml
@@ -2,10 +2,8 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <gradient
-                android:startColor="@color/colorBot"
-                android:endColor="@color/colorTop"
-                android:angle="90"/>
+            <corners android:radius="20dp"/>
+            <solid android:color="@android:color/white"/>
         </shape>
     </item>
 
