--- a/adminpanels/src/main/res/layout/activity_data_user.xml
+++ b/adminpanels/src/main/res/layout/activity_data_user.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     tools:context=".Activity.DataUserActivity">
 
-    <androidx.appcompat.widget.Toolbar
+    <com.google.android.material.appbar.MaterialToolbar
+        style="@style/MyActionBar"
         android:id="@+id/dToolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
@@ -15,7 +16,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-    </androidx.appcompat.widget.Toolbar>
+    </com.google.android.material.appbar.MaterialToolbar>
 
     <androidx.appcompat.widget.SearchView
         android:id="@+id/searchData"
