--- a/app/src/main/res/layout/activity_detail_menu.xml
+++ b/app/src/main/res/layout/activity_detail_menu.xml
@@ -393,59 +393,84 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginStart="10dp"
-            tools:ignore="UselessParent"
-            android:orientation="horizontal">
+     <RelativeLayout
+         android:layout_width="match_parent"
+         android:layout_height="match_parent"
+         tools:ignore="UselessParent">
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-            <TextView
-                android:id="@+id/tv_price"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/medium"
-                android:text="Total Harga"
-                android:textColor="@android:color/black"
-                tools:ignore="HardcodedText" />
 
-            <TextView
-                android:id="@+id/total_price"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/tv_price"
-                android:text="@string/price_item"
-                android:textColor="@android:color/black"
-                android:textSize="20sp"
-                android:textStyle="bold"
-                tools:ignore="ObsoleteLayoutParam" />
+         <LinearLayout
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             android:layout_marginStart="15dp"
+             android:id="@+id/text"
+             >
 
-            </LinearLayout>
+             <TextView
+                 android:id="@+id/tv"
+                 android:layout_width="wrap_content"
+                 android:layout_height="wrap_content"
+                 android:fontFamily="@font/medium"
+                 android:text="Total Harga"
+                 android:textColor="@android:color/black"
+                 tools:ignore="HardcodedText" />
+         </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="right"
-                android:layout_marginEnd="19dp"
-                tools:ignore="RtlHardcoded">
+         <LinearLayout
+             android:id="@+id/bayar"
+             android:layout_width="150dp"
+             android:layout_height="wrap_content"
+             android:orientation="horizontal"
+             android:layout_marginStart="15dp"
+             android:layout_below="@id/text">
 
-            <Button
-                android:id="@+id/btn_chart"
-                android:layout_width="200dp"
-                android:layout_height="50dp"
-                android:background="@drawable/btn_orange"
-                android:text="Masuk Keranjang"
-                android:textAllCaps="false"
-                android:textColor="@color/White"
-                android:textSize="18sp"
-                tools:ignore="HardcodedText" />
+             <TextView
+                 android:id="@+id/rp4"
+                 android:layout_width="wrap_content"
+                 android:layout_height="wrap_content"
+                 android:fontFamily="@font/medium"
+                 android:text="Rp."
+                 android:textSize="19sp"
+                 android:textStyle="bold"
+                 android:textColor="@android:color/black"
+                 tools:ignore="HardcodedText" />
 
-            </LinearLayout>
-        </LinearLayout>
+             <TextView
+                 android:id="@+id/total_price"
+                 android:layout_width="wrap_content"
+                 android:layout_height="wrap_content"
+                 android:text="15000"
+                 android:textColor="@android:color/black"
+                 android:textSize="19sp"
+                 android:textStyle="bold"
+                 tools:ignore="HardcodedText,ObsoleteLayoutParam" />
+         </LinearLayout>
+
+         <LinearLayout
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             android:gravity="right"
+             android:layout_marginEnd="15dp"
+             android:layout_toEndOf="@+id/bayar"
+             tools:ignore="RtlHardcoded">
+
+             <Button
+                 android:id="@+id/btn_chart"
+                 android:layout_width="200dp"
+                 android:layout_height="50dp"
+                 android:background="@drawable/btn_orange"
+                 android:text="Masuk Keranjang"
+                 android:textAllCaps="false"
+                 android:textColor="@color/White"
+                 android:textSize="18sp"
+                 tools:ignore="HardcodedText" />
+
+
+         </LinearLayout>
+
+
+
+     </RelativeLayout>
 
 
     </LinearLayout>
