--- a/app/src/main/res/layout/item_row_chart.xml
+++ b/app/src/main/res/layout/item_row_chart.xml
@@ -21,8 +21,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="7dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="5dp"
             android:text="@string/quantity"
             android:textSize="14sp"
             android:textColor="#000"
@@ -35,27 +35,40 @@
             android:text="@string/Title"
             android:textSize="14sp"
             android:textColor="#000"
-            android:layout_marginStart="100dp"
-            android:layout_marginTop="5dp"/>
+            android:layout_toEndOf="@id/quantity_chart"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="7dp"
+            tools:ignore="RelativeOverlap" />
 
-
-
+        <TextView
+            android:id="@+id/text_Rp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/title_chart"
+            android:layout_toEndOf="@id/quantity_chart"
+            android:layout_marginTop="7dp"
+            android:layout_marginStart="10dp"
+            android:text="Rp."
+            android:textColor="#000"
+            android:textSize="14sp"
+            tools:ignore="HardcodedText,RelativeOverlap" />
 
         <TextView
             android:id="@+id/price_chart"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/title_chart"
-            android:layout_toEndOf="@id/quantity_chart"
+            android:layout_toEndOf="@id/text_Rp"
             android:layout_marginTop="7dp"
-            android:layout_marginStart="65dp"
-            android:text="@string/price_item"
+            android:text="15000"
             android:textColor="#000"
             android:textSize="14sp"
-            tools:ignore="RelativeOverlap" />
+            tools:ignore="HardcodedText,RelativeOverlap" />
+
+
 
         <TextView
-            android:id="@+id/date_chart"
+            android:id="@+id/katering_chart"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="22dp"
@@ -75,14 +88,14 @@
             android:layout_marginTop="4dp"
             android:layout_marginStart="100sp"
             android:layout_alignParentEnd="true"
-            android:layout_below="@id/date_chart"
+            android:layout_below="@id/katering_chart"
             android:text="Waktu: 10.30"
             android:textColor="#000"
             android:textSize="14sp"
             tools:ignore="HardcodedText" />
 
         <TextView
-            android:id="@+id/katering_chart"
+            android:id="@+id/date_chart"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="22dp"
